increasing table caption contrast, accessibility fix

--- a/app/styles/partials/ucsd/base/_styling.scss
+++ b/app/styles/partials/ucsd/base/_styling.scss
@@ -32,6 +32,7 @@ table.styled tbody tr.even {
 
 table > caption {
 	font-weight: bold;
+	color: #616161;
 }
 
 table {
